force-app/main/default/objects/Product2/fields/Lic_Recurrente__c.field-meta.xml
<CustomField>
    <fullName>Lic_Recurrente__c</fullName>
    <label>Lic Recurrente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>