force-app/main/default/objects/Product2/fields/Tiene_Licencia_Recurrente__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Licencia_Recurrente__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>El producto ingresado tendrá un valor de Licencia Recurrente</inlineHelpText>
    <label>Tiene Licencia Recurrente</label>
    <type>Checkbox</type>
</CustomField>